src/compositor/compositor_api/qwaylandquickitem.cpp
@@ -253,6 +253,16 @@ void QWaylandBufferMaterial::ensureTextures(int count)
         m_textures << nullptr;
     }
 }
+
+void QWaylandBufferMaterial::setBufferRef(QWaylandQuickItem *surfaceItem, const QWaylandBufferRef &ref)
+{
+    Q_UNUSED(surfaceItem);
+    m_bufferRef = ref;
+    for (int plane = 0; plane < bufferTypes[ref.bufferFormatEgl()].planeCount; plane++)
+        if (auto texture = ref.toOpenGLTexture(plane))
+            setTextureForPlane(plane, texture);
+    bind();
+}
 #endif // QT_CONFIG(opengl)
 
 QMutex *QWaylandQuickItemPrivate::mutex = nullptr;
@@ -1411,10 +1421,7 @@ QSGNode *QWaylandQuickItem::updatePaintNode(QSGNode *oldNode, UpdatePaintNodeDat
 
     if (d->newTexture) {
         d->newTexture = false;
-        for (int plane = 0; plane < bufferTypes[ref.bufferFormatEgl()].planeCount; plane++)
-            if (auto texture = ref.toOpenGLTexture(plane))
-                material->setTextureForPlane(plane, texture);
-        material->bind();
+        material->setBufferRef(this, ref);
     }
 
     const QSize surfaceSize = ref.size() / surface()->bufferScale();
